<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fde_300w_Page">

    <com.google.android.material.appbar.MaterialToolbar
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:id="@+id/mainToolBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf= "parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/toolbar"
        app:navigationIcon="@drawable/ic_hamburger">

        <ImageView
            android:id="@+id/logo_principal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:scaleX="0.6"
            android:scaleY="0.6"
            android:src="@drawable/logo"
            />
        <!--android:contentDescription="@string/content_description_logo_pado"/>-->
    </com.google.android.material.appbar.MaterialToolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainToolBar"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:clipToPadding="false"
            android:orientation="vertical">

            <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:src="@drawable/fde300w_grande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

            <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="12dp"
        android:text="@string/titulo_page_fde300w"
        android:textColor="#444444"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="28dp"
        android:fontFamily="@font/roboto"
        android:paddingLeft="12dp"
        android:text="@string/descricao_page_embutir"
        android:textColor="#444444"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <LinearLayout
        android:id="@+id/PrincipalCmp"
        android:layout_width="353dp"
        android:layout_height="262dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:id="@+id/PrimirosCmp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Agua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageAgua"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/agua" />

                <TextView
                    android:id="@+id/textAgua"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:gravity="center|center_horizontal|fill_horizontal"
                    android:paddingLeft="5dp"
                    android:text="@string/texto_agua_dsc"
                    android:textColor="#444444"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Acesso"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageAcesso"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/acesso" />

                <TextView
                    android:id="@+id/textAcesso"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/texto_acesso_dsc"
                    android:textColor="#444444"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Teclado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageTeclado"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/teclado" />

                <TextView
                    android:id="@+id/textTeclado"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/texto_teclado_dsc"
                    android:textColor="#444444"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/SegundoCmp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/Alexa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageAlexa"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/alexa" />

                <TextView
                    android:id="@+id/textAlexa"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:text="@string/texto_alexa_dsc"
                    android:textColor="#444444"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Biometrico"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageBiometrico"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/biometrico" />

                <TextView
                    android:id="@+id/textBiometrico"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/texto_biometrico_dsc"
                    android:textColor="#444444"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="12dp">

                <ImageView
                    android:id="@+id/imageCartao"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/cartao" />

                <TextView
                    android:id="@+id/textCartao"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:paddingLeft="5dp"
                    android:text="@string/texto_cartao_dsc"
                    android:textColor="#444444"
                    android:textSize="12sp" />
                </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/botao300w"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:backgroundTint="#000000"
                android:fontFamily="@font/roboto"
                android:text="@string/botao"
                android:textAllCaps="false"
                app:cornerRadius="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>